[tool.poetry]
name = "ipl_match_result"
version = "0.1.0"
description = "Predict likelihood of a team winning a cricket match"
authors = ["sirius0503 <sirius0503en@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6.1"
jupyterlab = "^2.2.6"
numpy = "^1.19.1"
pandas = "^1.1.1"
matplotlib = "^3.3.1"
seaborn = "^0.10.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
